--- a/config/database.yml
+++ b/config/database.yml
@@ -6,10 +6,10 @@
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: mysql
+development:
+  adapter: mysql2
   database: discover 
   username: noorassas
   password: 9385516
   host: localhost
-  socket: /tmp/mysql.sock
+  socket: /var/run/mysqld/mysqld.sock
