--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,10 @@
 # Do not set this db to the same as development or production.
 development:
   adapter: mysql2
+  encoding: utf8
   database: discover 
-  username: noorassas
+  username: root
   password: 9385516
   host: localhost
   socket: /var/run/mysqld/mysqld.sock
+  pool: 5
